--- a/SPTradeApiSimpleDemoCSharp2015/SPTradeApiSimpleDemoCSharp2015.csproj
+++ b/SPTradeApiSimpleDemoCSharp2015/SPTradeApiSimpleDemoCSharp2015.csproj
@@ -56,7 +56,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="XFinApi.ITradeApi.DriverCS">
-      <HintPath>..\..\XTA_W32\CSharp\XFinApi.ITradeApi.DriverCS.dll</HintPath>
+      <HintPath>..\XTA_W32\CSharp\XFinApi.ITradeApi.DriverCS.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
